<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <TextView
        android:id="@+id/tvEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/fragment_title_entrar"
        android:textColor="@color/verde_escuro"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/fragment_title_senha"
        android:textColor="@color/verde_escuro"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="306dp"
        android:layout_height="86dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/fragment_title_email"
        android:textColor="@color/verde_escuro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEntrar" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="306dp"
        android:layout_height="83dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <CheckBox
        android:id="@+id/checkBoxLembrarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/fragment_checkbox_lembrar_conta"
        android:textColor="@color/verde_escuro"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/editTextSenha"
        app:layout_constraintTop_toBottomOf="@+id/editTextSenha" />

    <TextView
        android:id="@+id/tvEqueceuSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/roboto_italic"
        android:text="@string/fragment_title_esqueceu_sua_senha"
        android:textColor="@color/verde_escuro"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/editTextSenha"
        app:layout_constraintTop_toBottomOf="@+id/editTextSenha" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="306dp"
        android:layout_height="62dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/verde_escuro"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/fragment_buttom_entrar"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:iconTint="@color/verde_escuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSenha"
        app:rippleColor="@color/verde_escuro" />

    <View
        android:id="@+id/viewLinhaHorizontal"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="27dp"
        android:background="@color/cinza"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

    <ImageButton
        android:id="@+id/imgGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="57dp"
        android:src="@drawable/icon_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

    <ImageButton
        android:id="@+id/imgFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="42dp"
        android:src="@drawable/icon_facebook"
        app:layout_constraintEnd_toStartOf="@+id/imgTwitter"
        app:layout_constraintStart_toEndOf="@+id/imgGoogle"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

    <ImageButton
        android:id="@+id/imgTwitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="65dp"
        android:src="@drawable/icon_twitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

    <TextView
        android:id="@+id/tvAindaNaoTemConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/fragment_title_ainda_nao_tem_conta"
        android:textColor="@color/verde_escuro"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

    <TextView
        android:id="@+id/tvCadastreSe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/fragment_title_cadastrase"
        android:textColor="@color/verde_royal"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvAindaNaoTemConta"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />


</androidx.constraintlayout.widget.ConstraintLayout>